--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.username=
 spring.datasource.password=
 #spring.datasource.dataSourceClassName=org.h2.jdbcx.JdbcDataSource
 spring.datasource.dataSourceClassName=org.h2.Driver
-spring.datasource.schema=classpath:/sql/schema.sql
+#spring.datasource.schema=classpath:/sql/schema.sql
 #spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
 # JPA properties
