--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-websocket</artifactId>
 		</dependency>
+		<!-- fast Json -->
+		<dependency>
+		    <groupId>com.alibaba</groupId>
+		    <artifactId>fastjson</artifactId>
+		    <version>1.2.11</version>
+		</dependency>
 		<!--  
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
