--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,18 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 		-->
+		
+		<dependency>  
+	       <groupId>org.springframework.boot</groupId>  
+	       <artifactId>spring-boot-devtools</artifactId>   
+	   </dependency>
+	   
+	   <!-- http://mvnrepository.com/artifact/org.jsoup/jsoup -->
+		<dependency>
+		    <groupId>org.jsoup</groupId>
+		    <artifactId>jsoup</artifactId>
+		    <version>1.8.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -78,4 +90,15 @@
 			</plugin>
 		</plugins>
 	</build>
+	
+	<repositories>  
+    	<repository>  
+        	<id>spring-milestones</id>  
+        	<name>Spring Milestones</name>  
+        	<url>http://repo.spring.io/milestone</url>  
+        	<snapshots>  
+           		 <enabled>false</enabled>  
+       		</snapshots>  
+   	  	</repository>  
+	</repositories> 
 </project>
